@@ -1,5 +1,9 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincOxide.csproj: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* Manpage.txt:
 	* ZincOxide.csproj: 
 
